--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@nuxt/icon": "1.15.0",
     "@tailwindcss/vite": "^4.1.11",
     "@vite-pwa/nuxt": "^1.0.4",
+    "idb": "^8.0.3",
     "nuxt": "^4.0.1",
     "tailwindcss": "^4.1.11",
     "vue": "^3.5.18",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "workbox-background-sync": "^7.3.0"
   },
   "devDependencies": {
     "@iconify-json/lucide": "^1.2.60"
