--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@iconify-json/lucide": "^1.2.60"
+    "@iconify-json/lucide": "^1.2.60",
+    "eruda": "^3.4.3"
   }
 }
